# prometheus

./: .gitignore  .readthedocs.yaml  README.md  meson.build  out
.github/workflows/: Test.yml
docs/source/: background.rst  conf.py  dynamic-linking.rst  elf-rundown.rst  index.rst
headers/: dump_elf_header.h  dump_program_header.h  dump_section_header.h  dump_symbol_table.h  hashmap.h  link.h  linkedlist.h  misc.h  obj_metadata.h  parse_args.h
linker/: main.c  meson.build
scripts/: run.sh
src/: consts.h  custom_objdump.c  custom_objdump.h  dump_elf_header.c  dump_program_header.c  dump_section_header.c  dump_symbol_table.c  elf.c  elf.h  elf_header.c  elf_header.h  extra.c  extra.h  hashmap.c  link.c  linkedlist.c  main.c  meson.build  misc.c  objmeta.c  parse_args.c
tests/ET_REL_FAIL/: makefile  program1.c  tester.py
tests/STB_GLOBAL_CONFLICT/: global1.c  makefile  one.s  tester.py  tester.sh  two.s
tests/STB_GLOBAL_NOCONFLICT/: one.s  tester.py
tests/STB_GLOBAL_PASS/: two.s
tests/static_libs/: asm_lib.s  asm_main.s  lib.c  main.c
